assets/css/style.css
/* this is the font imported from google fonts*/
@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=Red+Hat+Display:wght@300&display=swap');

/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    color: #fff7e0;
    font-family: "Red Hat Display", sans-serif;
}

h1,
h2 {
    font-family: "dosis", sans-serif;
    letter-spacing: 2px;
}

/* Header */
header {
    background-color: #9aacaf;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 2px 2px #6f6f6f;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

header a {
    text-decoration: none;
    color: inherit;
}

#menu {
    font-size: 110%;
    letter-spacing: 4px;
    list-style-type: none;
}

#menu>li {
    margin-bottom: 1em;
}

#menu a:hover {
    color: #353535
}

.active {
    color: #353535;
}

/* Navbar styles with dropdown toggle */
nav {
    position: absolute;
    background-color: #9aacaf;
    width: 100%;
    left: 0;
    padding: 0.5rem 1rem;
    box-shadow: 0 2px 2px #4b381d;
    display: none;
    top: 100%;
}

/* Nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}

/* Main content */
main {
    /* Places footer at the bottom by having the main take up any leftover space */
    flex: 1 0 auto;
    margin-top: 20px;
}

#hero {
    height: 600px;
    width: 100%;
    background: url("../images/hero1.jpg") no-repeat center center/cover;
    position: relative;
}

#cover-text {
    background-color: #8b7a63cc;
    position: absolute;
    width: 80%;
    bottom: 50px;
    padding: 30px;
}

#introduction {
    color: #4b381d;
    padding: 20px 20px 0;
    display: grid;
    place-items: center;
}

#introduction h2 {
    font-size: 200%;
    padding: 20px 0;
}

#introduction div {
    max-width: 300px;
    padding-bottom: 20px;
}

img {
    width: 100%;
}

#video {
    text-align: center;
    padding: 20px;
    padding-bottom: 100px;
}

#video h2 {
    font-size: 2em;
    margin-bottom: 10px;
    color: #4b381d;
}

#video p {
    font-size: 1.2em;
    margin-bottom: 20px;
    color: #4b381d;
}

video {
    min-width: 300px;
}

/* Find us page */
#find_us {
    color: #4b381d;
    padding: 40px 50px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#location {
    width: 100%;
    max-width: 800px;
    margin: 20px auto;
}

iframe {
    width: 100%;
    max-height: 450px;
    border: none;
    padding-top: 5px;
}

.find_us_divs {
    width: 100%;
    max-width: 800px;
    margin-bottom: 20px;
}

.div_column {
    display: flex;
    justify-content: space-between;
    max-width: 300px;
}

/* This section below styles the links for the email and phone number, it also highlights these details when hovered over */
#info a {
    color: #4b381d;
    text-decoration: none;
}

#info a:hover {
    text-decoration: underline;
    color: #88755a;
}

/* sign up page */

#signup {
    background: url('../images/husky3.jpg') no-repeat calc(50% + 100px) center / cover;
    height: 800px;
    width: 100%;
    padding: 50px;
    flex-grow: 1;
    position: relative;
}

#signup-form {
    color: #fff7e0;
    background-color: #8b7a63cc;
    padding: 50px;
    max-width: 600px;
    position: absolute;
    right: 10%;
}

.text-input {
    background: transparent;
    color: #fff7e0;
    width: 100%;
    height: 25px;
    margin: 5px 0 20px 0;
    border: .8px solid #fff7e0;
    padding: 0 5px;
}

.join-button {
    border: 0px;
    padding: 5px 10px;
    font-size: 100%;
    background-color: #fff7e0;
    color: #4b381d;
    position: absolute;
    right: 15%;
    font-family: "Red Hat Display", sans-serif;
}

/* thank you page */
#thanks {
    padding: 60px 30%;
    display: flex;
    justify-content: center;
    text-align: center;
    font-size: 150%;
    color: #4b381d;
}

/* Footer */
footer {
    background-color: #cfc0ad;
}

#social-networks {
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-networks i {
    font-size: 160%;
    padding: 5%;
    color: #fff7e0;
}

#social-networks a:hover i {
    color: #4b381d;
}

/* Media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {

    /* Header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 1rem;
    }

    #menu {
        display: flex;
    }

    #menu>li {
        padding-left: 1rem;
    }

    .nav-toggle-label {
        display: none;
    }

    #logo {
        font-size: 280%;
        line-height: 75px;
        margin: 0 0.5rem;
    }

    /* Main content */
    main {
        /* Push main content down to accommodate larger header */
        margin-top: 79px;
    }

    #cover-text {
        width: 50%;
    }

    #introduction {
        /* Creates two columns for the layout*/
        grid-template-columns: 1fr 1fr;
    }

    #introduction h2 {
        font-size: 300%;
    }

    video {
        width: 75%;
    }

    /* find us page */

    #find_us_inner {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: space-between;
        width: 100%;
        max-width: 800px;
    }

    .find_us_divs {
        width: 48%;
    }

    /* Sign up page */
    #signup {
        background-position: center;
    }



}

/* Large devices (laptops and desktops 992px and up) */
@media screen and (min-width: 992px) {
    #menu a:hover {
        color: #3a3a3a;
    }

    #introduction div {
        max-width: 450px;
    }
}

video {
    width: 60%;
}

/* Large devices (extra large, 1201px and up) */
@media screen and (min-width: 1201px) {
    body{
        font-size: 140%;
    }
    #cover-text {
        width: 35%;
    }
}

